fix: button overflow

--- a/src/tw-whiteboard/components/App.css
+++ b/src/tw-whiteboard/components/App.css
@@ -6,7 +6,7 @@
   z-index: 0;
 }
 
-.tw-whiteboard-tldraw-container button:not(.tc-btn-invisible) {
+.tw-whiteboard-tldraw-container button.tlui-button:not(.tc-btn-invisible) {
   /* padding: unset; */
   border-radius: unset;
   background-color: unset;
